--- a/SIGS_prototype/pages/relatorio_turmas.html
+++ b/SIGS_prototype/pages/relatorio_turmas.html
@@ -43,8 +43,7 @@
       <main class="mainConteiner">
         <h1>Relatório por Turmas</h1>
         <form action="relatorios_turmas.html">
-          <input type="radio" name="relatorio">
-          <label class="school_room_reports">Todas</label>
+         <%= link_to "alocadas" reports_school_room_allocation_path(format: :pdf), class:"btn btn-danger" %>
           <input type="radio" name="relatorio">
           <label class="school_room_reports">Alocadas</label>
           <input type="radio" name="relatorio">
