issue #51: Create prototype

--- a/SIGS_prototype/pages/visualizar_turmas.html
+++ b/SIGS_prototype/pages/visualizar_turmas.html
@@ -40,7 +40,7 @@
         </figure>
       </header>
       <main class="mainConteiner">
-        <h1>Turma</h1>
+        <h1>Turmas - Departamento de Matemática</h1>
         <label>Disciplina</label>
         <select>
           <option>Literatura</option>
@@ -51,33 +51,49 @@
 
         <h3>Literatura</h3>
         <table class="table">
-            <tr>
-              <th>Turma</th>
-              <th>Cursos</th>
-              <th>Recursos</th>
-              <th>Editar</th>
-              <th>Excluir</th>
-            </tr>
+          <th>Disciplina</th>
+          <th>Turma</th>
+          <th>Cursos</th>
+          <th>Nº de Vagas</th>
+          <th style="text-align:center">Alocar</th>
+          <th style="text-align:center">Alterar</th>
+          <th style="text-align:center">Excluir</th>
+        </tr>
           <tr>
-            <td>A</td>
-            <td>Letras, Jornalismo</td>
-            <td></td>
-            <td><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
-            <td><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
-          </tr>
-          <tr>
-            <td>B</td>
-            <td>Direito</td>
-            <td>Retroprojetor</td>
-            <td><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
-            <td><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
-          </tr>
-          <tr>
+            <td>Cálculo 1</td>
             <td>C</td>
-            <td></td>
-            <td></td>
-            <td><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
-            <td><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
+            <td>
+                Matemática(Licenciatura) <br>
+            <td>35</td>
+            </td>
+            <td style="text-align:center"><a href="alocacao.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
+            <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
+            <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
+            </td>
+          </tr>
+          <tr>
+            <td>Cálculo 3</td>
+            <td>A</td>
+            <td>
+                Engenharia Eletrônica <br>
+            <td>40</td>
+            </td>
+            <td style="text-align:center"><a href="solicitar1.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
+            <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
+            <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
+            </td>
+          </tr>
+          <tr>
+            <td>Cálculo 3</td>
+            <td>B</td>
+            <td>
+                Engenharia Automotiva <br>
+            <td>60</td>
+            </td>
+            <td style="text-align:center"><a href="solicitar2.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
+            <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
+            <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
+            </td>
           </tr>
         </table>
 
