issue #51: Update prototype

--- a/SIGS_prototype/pages/solicitar1.html
+++ b/SIGS_prototype/pages/solicitar1.html
@@ -42,12 +42,37 @@
         <form>
           <h1>Solicitar Alocação - (Período de Alocacão)</h1>
           <hr>
-          <h2>Departamento: XXXX</h2>
-          <h2>Disciplina: XXXXX</h2>
-          <h2>Curso: XXXXX</h2>
+          <table class="table">
+            <tr>
+              <th>Turma</th>
+              <th>Disciplina</th>
+              <th>Nº de Vagas</th>
+              <th>Cursos</th>
+              <th>Recursos</th>
+            </tr>
+
+            <tr>
+              <td>C</td>
+              <td>Cálculo 1</td>
+              <td>35</td>
+              <td>
+                  Matemática Licenciatura<br>
+              </td>
+              <td>
+              </td>
+            </tr>
+          </table>
           <hr>
-          
-        
+          <label>Departamento à solicitar: </label>
+          <select>
+            <option>Departamento de Física</option>
+            <option>Departamento de Matemática</option>
+            <option>Departamento de Artes</option>
+            <option>Departamento de Design</option>
+          </select>
+
+          <hr>
+
           <label>Justificativa:</label><br>
           <textarea style="width: 100%; height: 100px"></textarea>
 
