--- a/SIGS_prototype/pages/visualizar_turmas.html
+++ b/SIGS_prototype/pages/visualizar_turmas.html
@@ -56,6 +56,7 @@
           <th>Cursos</th>
           <th>Nº de Vagas</th>
           <th style="text-align:center">Alocar</th>
+          <th style="text-align:center">Solicitar Alocação</th>
           <th style="text-align:center">Alterar</th>
           <th style="text-align:center">Excluir</th>
         </tr>
@@ -67,6 +68,7 @@
             <td>35</td>
             </td>
             <td style="text-align:center"><a href="alocacao.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
+            <td style="text-align:center"><a href="solicitar1.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
             <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
             <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
             </td>
@@ -78,6 +80,7 @@
                 Engenharia Eletrônica <br>
             <td>40</td>
             </td>
+            <td style="text-align:center"><a href="alocacao.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
             <td style="text-align:center"><a href="solicitar1.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
             <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
             <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
@@ -90,6 +93,7 @@
                 Engenharia Automotiva <br>
             <td>60</td>
             </td>
+            <td style="text-align:center"><a href="alocacao.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
             <td style="text-align:center"><a href="solicitar2.html"><img src="../assets/img/icon_alloc.png" alt="Icon alloc" /></a></td>
             <td style="text-align:center"><a href="alterar_turma.html"><img src="../assets/img/icon_edit.png" alt="Icon edit" /></a></td>
             <td style="text-align:center"><a href="#!" data-toggle="modal" data-target=".modalDelete"><img src="../assets/img/icon_trash.png" alt="excluir"></a></td>
