Adapt prototype with PO avaliation

--- a/SIGS_prototype/pages/relatorio_por_predio.html
+++ b/SIGS_prototype/pages/relatorio_por_predio.html
@@ -59,21 +59,29 @@
         <table class="table table-striped tableDisciplineReport">
           <thead>
             <tr>
+              <th>Código</th>
               <th>Prédio</th>
+              <th>Ala</th>
               <th>Relatório</th>
             </tr>
           </thead>
           <tbody>
             <tr>
-              <td>BSA Sul</td>
+              <td>BSAS</td>
+              <td>Bloco de Salas da Ala Sul</td>
+              <td>Sul</td>
               <td><a href="Relatório_predio.pdf"><img src="../assets/img/icon_pdf.png" alt="Gerar Relatório" /></a></td>
             </tr>
             <tr>
               <td>CIC/EST</td>
+              <td>Prédio de Ciência da Computação e Estatística</td>
+              <td>Norte</td>
               <td><a href="Relatório_predio.pdf"><img src="../assets/img/icon_pdf.png" alt="Gerar Relatório" /></a></td>
             </tr>
             <tr>
               <td>FT</td>
+              <td>Faculdade de Tecnologia</td>
+              <td>Norte</td>
               <td><a href="Relatório_predio.pdf"><img src="../assets/img/icon_pdf.png" alt="Gerar Relatório" /></a></td>
             </tr>
           </tbody>
