issue #25: prototype done

--- a/SIGS_prototype/pages/mostrar_sala.html
+++ b/SIGS_prototype/pages/mostrar_sala.html
@@ -40,15 +40,127 @@
       </header>
       <main class="mainConteiner">
         <h1>Sala: Superior 10</h1>
-        <h2>Código: S10</h2>
-        <h2>Capacidade: 50</h2>
-        <h2>Ativo: Sim</h2>
-        <h2>Prédio: Pavilhão João Calmon</h2>
-        <h2>Categorias: </h2>
-          <ul>
-          <li><h3>Sala de informática</h3></li>
-          <li><h3>Ar condicionado</h3></li>
-          </ul>
+        <div class="row">
+            <div class="col-md-6">
+              <ul class="list-group">
+                <li class="list-group-item">Código: S10</li>
+                <li class="list-group-item">Capacidade: 50</li>
+                <li class="list-group-item">Ativo: Sim</li>
+                <li class="list-group-item">Prédio: Pavilhão João Calmon</li>
+              </ul>
+            </div>
+            <div class="col-md-6">
+              <ul class="list-group">
+                <li class="list-group-item"><h4>Categorias:</h4></li>
+                <li class="list-group-item">Sala de informática</li>
+                <li class="list-group-item">Ar condicionado</li>
+              </ul>
+            </div>
+        <table class="table tableViewAllocation">
+            <thead>
+              <tr>
+                <th>Horários</th>
+                <th>Segunda</th>
+                <th>Terça</th>
+                <th>Quarta</th>
+                <th>Quinta</th>
+                <th>Sexta</th>
+                <th>Sábado</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>06:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>07:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>08:00</th>
+                <td rowspan="2">
+                  <p>Cálculo 3</p>
+                  <small>Turma: B</small>
+                </td>
+                <td></td>
+                <td rowspan="2">
+                  <p>Cálculo 3</p>
+                  <small>Turma: B</small>
+                </td>
+                <td></td>
+                <td rowspan="2">
+                  <p>Cálculo 3</p>
+                  <small>Turma: B</small>
+                </td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>09:00</th><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>10:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>11:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>12:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>13:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>14:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>15:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>16:00</th>
+                <td rowspan="2">
+                  <p>Cálculo 2</p>
+                  <small>Turma: C</small>
+                </td>
+                <td rowspan="2">
+                  <p>Introdução à Álgebra Linear</p>
+                  <small>Turma: A</small>
+                </td>
+                <td rowspan="2">
+                  <p>Cálculo 2</p>
+                  <small>Turma: C</small>
+                </td>
+                <td rowspan="2">
+                  <p>Introdução à Álgebra Linear</p>
+                  <small>Turma: A</small>
+                </td>
+                <td rowspan="2">
+                  <p>Cálculo 2</p>
+                  <small>Turma: C</small>
+                </td>
+                <td></td>
+              </tr>
+              <tr>
+                <th>17:00</th><td></td>
+              </tr>
+              <tr>
+                <th>18:00</th><td>Inglês</td><td></td><td>Inglês</td><td></td><td>Inglês</td><td></td>
+              </tr>
+              <tr>
+                <th>19:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>20:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>21:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>22:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+              <tr>
+                <th>23:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+              </tr>
+            </tbody>
+        </table>
       </main>
     </div>
   </body>
