--- a/SIGS_prototype/pages/mostrar_sala.html
+++ b/SIGS_prototype/pages/mostrar_sala.html
@@ -41,127 +41,177 @@
       <main class="mainConteiner">
         <h1>Sala: Superior 10</h1>
         <div class="row">
-            <div class="col-md-6">
-              <ul class="list-group">
-                <li class="list-group-item">Código: S10</li>
-                <li class="list-group-item">Capacidade: 50</li>
-                <li class="list-group-item">Ativo: Sim</li>
-                <li class="list-group-item">Prédio: Pavilhão João Calmon</li>
-              </ul>
-            </div>
-            <div class="col-md-6">
-              <ul class="list-group">
-                <li class="list-group-item"><h4>Categorias:</h4></li>
-                <li class="list-group-item">Sala de informática</li>
-                <li class="list-group-item">Ar condicionado</li>
-              </ul>
-            </div>
-        <table class="table tableViewAllocation">
-            <thead>
-              <tr>
-                <th>Horários</th>
-                <th>Segunda</th>
-                <th>Terça</th>
-                <th>Quarta</th>
-                <th>Quinta</th>
-                <th>Sexta</th>
-                <th>Sábado</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>06:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>07:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>08:00</th>
-                <td rowspan="2">
-                  <p>Cálculo 3</p>
-                  <small>Turma: B</small>
-                </td>
-                <td></td>
-                <td rowspan="2">
-                  <p>Cálculo 3</p>
-                  <small>Turma: B</small>
-                </td>
-                <td></td>
-                <td rowspan="2">
-                  <p>Cálculo 3</p>
-                  <small>Turma: B</small>
-                </td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>09:00</th><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>10:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>11:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>12:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>13:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>14:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>15:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>16:00</th>
-                <td rowspan="2">
-                  <p>Cálculo 2</p>
-                  <small>Turma: C</small>
-                </td>
-                <td rowspan="2">
-                  <p>Introdução à Álgebra Linear</p>
-                  <small>Turma: A</small>
-                </td>
-                <td rowspan="2">
-                  <p>Cálculo 2</p>
-                  <small>Turma: C</small>
-                </td>
-                <td rowspan="2">
-                  <p>Introdução à Álgebra Linear</p>
-                  <small>Turma: A</small>
-                </td>
-                <td rowspan="2">
-                  <p>Cálculo 2</p>
-                  <small>Turma: C</small>
-                </td>
-                <td></td>
-              </tr>
-              <tr>
-                <th>17:00</th><td></td>
-              </tr>
-              <tr>
-                <th>18:00</th><td>Inglês</td><td></td><td>Inglês</td><td></td><td>Inglês</td><td></td>
-              </tr>
-              <tr>
-                <th>19:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>20:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>21:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>22:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
-              <tr>
-                <th>23:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
-              </tr>
+          <div class="col-md-6">
+            <ul class="list-group">
+              <li class="list-group-item">Código: S10</li>
+              <li class="list-group-item">Capacidade: 50</li>
+              <li class="list-group-item">Ativo: Sim</li>
+              <li class="list-group-item">Prédio: Pavilhão João Calmon</li>
+            </ul>
+          </div>
+          <div class="col-md-6">
+            <ul class="list-group">
+              <li class="list-group-item"><h4>Categorias:</h4></li>
+              <li class="list-group-item">Sala de informática</li>
+              <li class="list-group-item">Ar condicionado</li>
+            </ul>
+          </div>
+        </div>
+        <table class="table tableViewAllocation table-hover table-bordered">
+          <thead>
+            <tr>
+              <th>Horários</th>
+              <th>Segunda</th>
+              <th>Terça</th>
+              <th>Quarta</th>
+              <th>Quinta</th>
+              <th>Sexta</th>
+              <th>Sábado</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <th>06:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>07:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>08:00</th>
+              <td rowspan="2">
+                <p>Cálculo 3</p>
+                <small>Turma: B</small>
+              </td>
+              <td></td>
+              <td rowspan="2">
+                <p>Cálculo 3</p>
+                <small>Turma: B</small>
+              </td>
+              <td></td>
+              <td rowspan="2">
+                <p>Cálculo 3</p>
+                <small>Turma: B</small>
+              </td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>09:00</th><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>10:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>11:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>12:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>13:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>14:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>15:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>16:00</th>
+              <td rowspan="2">
+                <p>Cálculo 2</p>
+                <small>
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: C
+                  </a>
+                </small>
+              </td>
+              <td rowspan="2">
+                <p>Introdução à Álgebra Linear</p>
+                <small>
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: A
+                  </a>
+                   |
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: B
+                  </a>
+                </small>
+              </td>
+              <td rowspan="2">
+                <p>Cálculo 2</p>
+                <small>
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: C
+                  </a>
+                </small>
+              </td>
+              <td rowspan="2">
+                <p>Introdução à Álgebra Linear</p>
+                <small>
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: A
+                  </a>
+                   |
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: B
+                  </a>
+                </small>
+              </td>
+              <td rowspan="2">
+                <p>Cálculo 2</p>
+                <small>
+                  <a href="!#" data-toggle="modal" data-target="#myModal">
+                    Turma: C
+                  </a>
+                </small>
+              </td>
+              <td></td>
+            </tr>
+            <tr>
+              <th>17:00</th><td></td>
+            </tr>
+            <tr>
+              <th>18:00</th><td>Inglês</td><td></td><td>Inglês</td><td></td><td>Inglês</td><td></td>
+            </tr>
+            <tr>
+              <th>19:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>20:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>21:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>22:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
+            <tr>
+              <th>23:00</th><td></td><td></td><td></td><td></td><td></td><td></td>
+            </tr>
             </tbody>
         </table>
       </main>
+    </div>
+
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Turma: X</h4>
+          </div>
+          <div class="modal-body">
+            <ul class="list-group">
+              <li class="list-group-item">Disciplina: XXXXXXXX</li>
+              <li class="list-group-item">Capacidade: 50</li>
+            </ul>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
+          </div>
+        </div>
+      </div>
     </div>
   </body>
 </html>
