issue #25: view allocation prototype modal adjustments

--- a/SIGS_prototype/pages/mostrar_sala.html
+++ b/SIGS_prototype/pages/mostrar_sala.html
@@ -203,9 +203,41 @@
           </div>
           <div class="modal-body">
             <ul class="list-group">
+              <li class="list-group-item">Curso: XXXXXXXXX</li>
               <li class="list-group-item">Disciplina: XXXXXXXX</li>
               <li class="list-group-item">Capacidade: 50</li>
             </ul>
+            <ul class="list-group">
+              <li class="list-group-item"><h4>Categorias:</h4></li>
+              <li class="list-group-item">Sala de informática</li>
+              <li class="list-group-item">Ar condicionado</li>
+            </ul>
+            <table class="table table-striped">
+              <thead>
+                <tr>
+                  <th>Horário</th>
+                  <th>Dia</th>
+                  <th>Sala</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>16:00</td>
+                  <td>Segunda</td>
+                  <td>Superior 10</td>
+                </tr>
+                <tr>
+                  <td>16:00</td>
+                  <td>Quarta</td>
+                  <td>Superior 10</td>
+                </tr>
+                <tr>
+                  <td>14:00</td>
+                  <td>Sexta</td>
+                  <td>Inferior 9</td>
+                </tr>
+              </tbody>
+            </table>
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-primary" data-dismiss="modal">Fechar</button>
