--- a/SIGS_prototype/pages/criar_turma.html
+++ b/SIGS_prototype/pages/criar_turma.html
@@ -54,19 +54,26 @@
             <label>Capacidade</label>
             <input type="number" class="form-control">
           </div>
-          <br>
-          <p>Cursos Preferenciais</p>
-          <div class="checkbox-group">
-            <input type="checkbox">
-            <label>Engenharia de Software</label>
-            <input type="checkbox">
-            <label>Engenharia Eletrônica</label>
-            <input type="checkbox">
-            <label>Medicina</label>
-            <input type="checkbox">
-            <label>Design</label>
-          </div>
-          <br>
+          <hr>
+		  <div class="flexContainer">
+			<div class="flexElement">
+			  <p>Adicionar Curso</p>
+			  <div class="search-elements">
+				<input type="text" class='search-input' placeholder="Pesqueisar curso por código...">
+				<!--i class="fa fa-search fa-lg"></i-->
+				<button class="icon-search-submit"><img src="../assets/img/icon_search.png"></button>
+			  </div>
+			  <div class="search-result">
+				  <button class="icon-search-submit"><img src="../assets/img/plus.png"></button><span>Engenharia de Software</span>
+			  </div>
+			</div>
+			<div class="flexElement">
+			  <p>Cursos Adicionados</p>
+			  <p><button class="icon-search-submit"><img src="../assets/img/remove-button.png"></button><span>Engenharia Elétrica</span></p>
+			  <p><button class="icon-search-submit"><img src="../assets/img/remove-button.png"></button><span>Economia</span></p>
+			</div>			
+		  </div>
+          <hr>
           <p>Categorias</p>
           <div class="checkbox-group">
             <input type="checkbox">
