--- a/SIGS_prototype/pages/criar_turma.html
+++ b/SIGS_prototype/pages/criar_turma.html
@@ -41,42 +41,47 @@
       </header>
       <main class="mainConteiner">
         <h1>Nova Turma</h1>
-        <form id="school_room">
-          <label>Disciplina</label>
-          <select>
-            <option>Cálculo 1</option>
-            <option>História da Arte</option>
-            <option>Matemática Discreta</option>
-          </select>
-          <div class="short_input">
-            <label>Nome</label>
-            <input type="text" class="form-control">
-            <label>Capacidade</label>
-            <input type="number" class="form-control">
+        <div class="row">
+          <div class="col-sm-8">
+            <form id="school_room">
+              <label>Disciplina</label>
+                <select>
+                  <option>Cálculo 1</option>
+                  <option>História da Arte</option>
+                  <option>Matemática Discreta</option>
+                </select>
+                <div class="short_input">
+                  <label>Nome</label>
+                  <input type="text" class="form-control">
+                  <label>Capacidade</label>
+                  <input type="number" class="form-control">
+                </div>
+              <br>
+              <p>Cursos Preferenciais</p>
+              <div class="checkbox-group">
+                <input type="checkbox">
+                <label class="myLabel">Engenharia de Software</label>
+                <input type="checkbox">
+                <label class="myLabel">Engenharia Eletrônica</label>
+                <input type="checkbox">
+                <label class="myLabel">Medicina</label>
+                <input type="checkbox">
+                <label class="myLabel">Design</label>
+              </div>
+              <br>
+              <p>Categorias</p>
+              <div class="checkbox-group">
+                <input type="checkbox">
+                <label class="myLabel">Retroprojetor</label>
+                <input type="checkbox">
+                <label class="myLabel">Laboratório Químico</label>
+              </div>
+              <br>
+              <a href="visualizar_turmas.html" class="btn btn-danger" role="button">Voltar</a>
+              <input type="submit" value="Criar Turma" class="btn btn-default btn-success" />
+            </form>
           </div>
-          <br>
-          <p>Cursos Preferenciais</p>
-          <div class="checkbox-group">
-            <input type="checkbox">
-            <label>Engenharia de Software</label>
-            <input type="checkbox">
-            <label>Engenharia Eletrônica</label>
-            <input type="checkbox">
-            <label>Medicina</label>
-            <input type="checkbox">
-            <label>Design</label>
-          </div>
-          <br>
-          <p>Categorias</p>
-          <div class="checkbox-group">
-            <input type="checkbox">
-            <label>Retroprojetor</label>
-            <input type="checkbox">
-            <label>Laboratório Químico</label>
-          </div>
-
-          <input type="submit" value="Criar Turma" class="btn btn-default btn-success" />
-        </form>
+        </div>
       </main>
     </div>
   </body>
