--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -38,11 +38,78 @@
           </a>
         </figure>
       </header>
+      <div class="topBar">
+        <a href="../index.html" class="btn btn-default pull-right" role="button">Sair</a>
+        <a href="minha_conta.html" class="btn btn-default pull-right" role="button">Minha Conta</a>
+        <p class="welcomeUser pull-right">Bem-vindo(a) [Nome do usuário]</p>  
+      </div>
       <main class="mainConteiner">
-        <h1> Wallacy Braz</h1>
-        <h2>CPF: 05012348888 </h2> <br>
-        <h2>Registro: 1234588 </h2> <br>
-        <h2>Email: wallacy@unb.br </h2> <br>
+        <div class="row">
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-aqua"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Total de Turmas</span>
+                <span class="info-box-number">90</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-red"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Turmas Alocadas</span>
+                <span class="info-box-number">90</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+          </div>
+          <div class="col-md-4 col-sm-6 col-xs-12">
+            <div class="info-box">
+              <span class="info-box-icon bg-yellow"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
+
+              <div class="info-box-content">
+                <span class="info-box-text">Solicitações</span>
+                <span class="info-box-number">5</span>
+              </div>
+              <!-- /.info-box-content -->
+            </div>
+          </div>
+        </div><!-- /.row -->
+        <h2>Calendário</h2>
+        <div class="row">
+          <div class="col-sm-8">
+            <table class="table table-hover whiteBackground">
+              <thead>
+                <tr>
+                  <td>Período</td>
+                  <td>Início</td>
+                  <td>Fim</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Ajuste</td>
+                  <td>XX/XX</td>
+                  <td>XX/XX</td>
+                </tr>
+                <tr>
+                  <td>Alocação</td>
+                  <td>XX/XX</td>
+                  <td>XX/XX</td>
+                </tr>
+                <tr>
+                  <td>Letivo</td>
+                  <td>XX/XX</td>
+                  <td>XX/XX</td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+        </div>
       </main>
     </div>
   </body>
