--- a/SIGS_prototype/pages/home.html
+++ b/SIGS_prototype/pages/home.html
@@ -10,14 +10,58 @@
     <meta name="description" content="Sistema de Alocação de Salas Inteligente da UnB.">
     <link rel="stylesheet" media="all" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" media="all" href="../assets/css/style.css" />
-    <link rel="stylesheet" media="all" href="../assets/css/navbar.css" />
+    <!-- <link rel="stylesheet" media="all" href="../assets/css/navbar.css" /> -->
     <script src="../assets/js/jquery-1.12.4.min.js"></script>
     <script src="../assets/js/bootstrap.min.js"></script>
     <script src="../assets/js/main.js"></script>
-    <script src="../assets/js/menu.js"></script>
+    <!-- <script src="../assets/js/menu.js"></script> -->
   </head>
   <body>
-    <div class="container container-fluid myContainer">
+
+    <nav class="navbar myNavBar">
+      <div class="container">
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand myBrand" href="#">SIGS</a>
+        </div>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+          <ul class="nav navbar-nav myNav">
+            <li><a href="visualizar_turmas.html">Alocar</a></li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Salas <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="salas.html">Salas</a></li>
+                <li><a href="categorias.html">Categorias</a></li>
+              </ul>
+            </li>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Relatórios <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a href="relatorio_por_disciplina.html">por Disciplina</a></li>
+                <li><a href="relatorio_por_sala.html">por Sala</a></li>
+                <li><a href="relatorio_por_predio.html">por Prédio</a></li>
+              </ul>
+            </li>
+          </ul>
+          <ul class="nav navbar-nav navbar-right myNav">
+            <li><a href="minha_conta.html">Minha Conta</a></li>
+            <li><a href="../index.html">Sair</a></li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
+      </div><!-- /.container-fluid -->
+    </nav>
+
+
+
+    <!-- <div class="container container-fluid myContainer">
       <header class="navbar-default myNav">
         <figure class="logo">
           <img src="../assets/img/sigs_logo.png" alt="SIGS Logos" />
@@ -41,76 +85,94 @@
       <div class="topBar">
         <a href="../index.html" class="btn btn-default pull-right" role="button">Sair</a>
         <a href="minha_conta.html" class="btn btn-default pull-right" role="button">Minha Conta</a>
-        <p class="welcomeUser pull-right">Bem-vindo(a) [Nome do usuário]</p>  
-      </div>
-      <main class="mainConteiner">
-        <div class="row">
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-aqua"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></span>
+        <p class="welcomeUser pull-right">Bem-vindo(a) [Nome do usuário]</p>
+      </div> -->
+      <div class="container">
+        <main class="mainConteiner">
+          <div class="row">
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-aqua"><span class="glyphicon glyphicon-list-alt" aria-hidden="true"></span></span>
 
-              <div class="info-box-content">
-                <span class="info-box-text">Total de Turmas</span>
-                <span class="info-box-number">90</span>
+                <div class="info-box-content">
+                  <span class="info-box-text">Total de Turmas</span>
+                  <span class="info-box-number">90</span>
+                </div>
+                <!-- /.info-box-content -->
               </div>
-              <!-- /.info-box-content -->
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-red"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></span>
+
+                <div class="info-box-content">
+                  <span class="info-box-text">Turmas Alocadas</span>
+                  <span class="info-box-number">90</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+            </div>
+            <div class="col-md-4 col-sm-6 col-xs-12">
+              <div class="info-box">
+                <span class="info-box-icon bg-yellow"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
+
+                <div class="info-box-content">
+                  <span class="info-box-text">Solicitações</span>
+                  <span class="info-box-number">5</span>
+                </div>
+                <!-- /.info-box-content -->
+              </div>
+            </div>
+          </div><!-- /.row -->
+          <h2>Calendário</h2>
+          <div class="row">
+            <div class="col-sm-8">
+              <table class="table table-hover whiteBackground">
+                <thead>
+                  <tr>
+                    <td>Período</td>
+                    <td>Início</td>
+                    <td>Fim</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Ajuste</td>
+                    <td>XX/XX</td>
+                    <td>XX/XX</td>
+                  </tr>
+                  <tr>
+                    <td>Alocação</td>
+                    <td>XX/XX</td>
+                    <td>XX/XX</td>
+                  </tr>
+                  <tr>
+                    <td>Letivo</td>
+                    <td>XX/XX</td>
+                    <td>XX/XX</td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-red"><span class="glyphicon glyphicon-education" aria-hidden="true"></span></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">Turmas Alocadas</span>
-                <span class="info-box-number">90</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-          </div>
-          <div class="col-md-4 col-sm-6 col-xs-12">
-            <div class="info-box">
-              <span class="info-box-icon bg-yellow"><span class="glyphicon glyphicon-time" aria-hidden="true"></span></span>
-
-              <div class="info-box-content">
-                <span class="info-box-text">Solicitações</span>
-                <span class="info-box-number">5</span>
-              </div>
-              <!-- /.info-box-content -->
-            </div>
-          </div>
-        </div><!-- /.row -->
-        <h2>Calendário</h2>
-        <div class="row">
-          <div class="col-sm-8">
-            <table class="table table-hover whiteBackground">
-              <thead>
-                <tr>
-                  <td>Período</td>
-                  <td>Início</td>
-                  <td>Fim</td>
-                </tr>
-              </thead>
-              <tbody>
-                <tr>
-                  <td>Ajuste</td>
-                  <td>XX/XX</td>
-                  <td>XX/XX</td>
-                </tr>
-                <tr>
-                  <td>Alocação</td>
-                  <td>XX/XX</td>
-                  <td>XX/XX</td>
-                </tr>
-                <tr>
-                  <td>Letivo</td>
-                  <td>XX/XX</td>
-                  <td>XX/XX</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
+        </main>
+    </div><!-- /.container -->
+    <footer class="footer">
+      <div class="container">
+        <img src="../assets/img/sigs_logo.png" alt="SIGS Logos" class="myLogo"/>
+        <ul class="myList pull-right">
+          <li><a href="#">Cras justo odio</a></li>
+          <li><a href="#">Dapibus ac facilisis in</a></li>
+          <li><a href="#">Morbi leo risus</a></li>
+          <li><a href="#">Porta ac consectetur ac</a></li>
+          <li><a href="#">Vestibulum at eros</a></li>
+        </ul>
+        <div class="text-center">
+          <a href="http://www.unb.br" target="_blank">
+            <img src="../assets/img/rodape_unb.png" alt="SIGS Logos" />
+          </a>
         </div>
-      </main>
-    </div>
+      </div>
+    </footer>
   </body>
 </html>
