--- a/SIGS_prototype/pages/exemplo.html
+++ b/SIGS_prototype/pages/exemplo.html
@@ -44,48 +44,7 @@
 
     <main class="mainConteiner">
       <div class="container">
-        <form>
-          <h1>Solicitar Alocação - (Período de Alocacão)</h1>
-          <hr>
-          <table class="table">
-            <tr>
-              <th>Turma</th>
-              <th>Disciplina</th>
-              <th>Nº de Vagas</th>
-              <th>Cursos</th>
-              <th>Recursos</th>
-            </tr>
-
-            <tr>
-              <td>C</td>
-              <td>Cálculo 1</td>
-              <td>35</td>
-              <td>
-                  Matemática Licenciatura<br>
-              </td>
-              <td>
-              </td>
-            </tr>
-          </table>
-          <hr>
-          <label>Departamento à solicitar: </label>
-          <select>
-            <option>Departamento de Física</option>
-            <option>Departamento de Matemática</option>
-            <option>Departamento de Artes</option>
-            <option>Departamento de Design</option>
-          </select>
-
-          <hr>
-
-          <label>Justificativa:</label><br>
-          <textarea style="width: 100%; height: 100px"></textarea>
-
-
-          <div class='actions'>
-            <input type="submit" name="commit" value="Solicitar" class="pull-right btn btn-default btn-success" data-disable-with="Gerar" />
-          </div>
-        </form>
+        <!-- CONTEUDO VAI AQUI -->
       </div><!-- /.container -->
     </main>
 
